--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "wrangler": "^0.0.17"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
