--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1",
-    "wrangler": "^0.0.17"
+    "prettier": "^2.5.1"
   }
 }
